WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247915
Keyboard smooth scrolling with spacebar doesn't rubber band at edges like iPad
https://bugs.webkit.org/show_bug.cgi?id=247915
Summary
Keyboard smooth scrolling with spacebar doesn't rubber band at edges like iPad
Richard Robinson
Reported
2022-11-14 13:56:17 PST
rdar://102012167
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2022-11-14 14:06:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6486
EWS
Comment 2
2022-11-30 22:14:21 PST
Committed
257220@main
(5e563a763a1e): <
https://commits.webkit.org/257220@main
> Reviewed commits have been landed. Closing PR #6486 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug